.metadata/.plugins/org.eclipse.cdt.ui/DHT22_Sensor.build.log
03:52:39 **** Incremental Build of configuration Debug for project DHT22_Sensor ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
In file included from ../Core/Inc/stm32f4xx_hal_conf.h:403,
                 from ../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal.h:29,
                 from ../Core/Inc/main.h:30,
                 from ../Core/Src/main.c:20:
../Core/Src/main.c: In function 'microDelay':
../Core/Src/main.c:72:33: error: 'htim1' undeclared (first use in this function); did you mean 'htim6'?
   72 |   while (__HAL_TIM_GET_COUNTER(&htim1) < delay);
      |                                 ^~~~~
../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_tim.h:1290:46: note: in definition of macro '__HAL_TIM_GET_COUNTER'
 1290 | #define __HAL_TIM_GET_COUNTER(__HANDLE__)  ((__HANDLE__)->Instance->CNT)
      |                                              ^~~~~~~~~~
../Core/Src/main.c:72:33: note: each undeclared identifier is reported only once for each function it appears in
   72 |   while (__HAL_TIM_GET_COUNTER(&htim1) < delay);
      |                                 ^~~~~
../Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_tim.h:1290:46: note: in definition of macro '__HAL_TIM_GET_COUNTER'
 1290 | #define __HAL_TIM_GET_COUNTER(__HANDLE__)  ((__HANDLE__)->Instance->CNT)
      |                                              ^~~~~~~~~~
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:365:13: error: invalid storage class for function 'MX_TIM6_Init'
  365 | static void MX_TIM6_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:403:13: error: invalid storage class for function 'MX_GPIO_Init'
  403 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:452:1: error: expected declaration or statement at end of input
  452 | }
      | ^
../Core/Src/main.c: At top level:
../Core/Src/main.c:52:13: warning: 'MX_GPIO_Init' used but never defined
   52 | static void MX_GPIO_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:53:13: warning: 'MX_TIM6_Init' used but never defined
   53 | static void MX_TIM6_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:443:6: warning: 'Error_Handler' defined but not used [-Wunused-function]
  443 | void Error_Handler(void)
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:403:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
  403 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:365:13: warning: 'MX_TIM6_Init' defined but not used [-Wunused-function]
  365 | static void MX_TIM6_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:319:6: warning: 'SystemClock_Config' defined but not used [-Wunused-function]
  319 | void SystemClock_Config(void)
      |      ^~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:37: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

03:52:39 Build Failed. 5 errors, 6 warnings. (took 496ms)

